--- a/package.xml
+++ b/package.xml
@@ -2,8 +2,8 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>twist_stamper</name>
-  <version>0.0.1</version>
-  <description>ROS2 package for converting Twist messages to TwistStamped</description>
+  <version>0.0.2</version>
+  <description>ROS2 package for converting between Twist and TwistStamped messages</description>
   <maintainer email="josh.newans@gmail.com">Josh Newans</maintainer>
   <author email="josh.newans@gmail.com">Josh Newans</author>
   <license>Apache License 2.0</license>
